# ROS2-Gazebo-Course-Files

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/robot_bringup/share/robot_bringup/: package.sh
install/robot_bringup/share/robot_bringup/config/: gazebo_bridge.yaml
install/robot_bringup/share/robot_bringup/launch/: absolute_description.launch.py  display.launch.xml  gazebo_robot.launch.py
install/robot_bringup/share/robot_bringup/worlds/: test_world.sdf
install/self_test_robot_description/share/self_test_robot_description/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/self_test_robot_description/share/self_test_robot_description/urdf/: mobile_base.xacro  mobile_base_gazebo.xacro
log/: latest_build  latest_version-check
src/robot_bringup/: CMakeLists.txt  package.xml
src/robot_bringup/config/: urdf_cam.rviz
src/robot_bringup/launch/: absolute_display.launch.py
src/self_test_robot_description/: CMakeLists.txt
src/self_test_robot_description/urdf/: camera.xacro  common_properties.xacro  robot.urdf  robot.urdf.xacro
